opam-version: "2.0"
name: "subsocia-eliom"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/subsocia-eliom/"
bug-reports: "https://github.com/paurkedal/subsocia-eliom/issues"
depends: [
  "adpkg" {build}
  "caqti"
  "caqti-lwt"
  "config-file"
  "eliom" {>= "6.6" & < "7.0~"}
  "fmt"
  "js_of_ocaml" {>= "3.3"}
  "js_of_ocaml-ppx"
  "js_of_ocaml-ppx_deriving_json"
  "lwt"
  "lwt_log"
  "lwt_ppx"
  "logs"
  "ocaml"
  "ocamlbuild" {build}
  "ocamlfind"
  "panograph"
  "prime"
  "ptime"
  "react"
  "subsocia" {>= "0.18~"}
  "topkg" {build}
]
build: ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%"]
dev-repo: "git+https://github.com/paurkedal/subsocia-eliom.git"
synopsis: "Web interface for Subsocia running under ocsigenserver"
