opam-version: "2.0"
name: "subsocia-eliom"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://github.com/paurkedal/subsocia-eliom/"
bug-reports: "https://github.com/paurkedal/subsocia-eliom/issues"
depends: [
  "caqti"
  "caqti-lwt"
  "confero"
  "decoders-yojson"
  "dune"
  "eliom" {>= "8.9.0" & < "12.0.0~"}
  "fmt"
  "jose"
  "js_of_ocaml" {>= "3.3"}
  "js_of_ocaml-ppx"
  "js_of_ocaml-ppx_deriving_json"
  "lwt"
  "logs"
  "ocaml"
  "panograph"
  "prime"
  "ptime"
  "re"
  "react"
  "subsocia" {>= "0.18~"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "install" "-p" name "--create-install-file" name]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git+https://github.com/paurkedal/subsocia-eliom.git"
